css/style.css
@import url("https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Inter:wght@400;500&display=swap");


*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    list-style: none;
    text-decoration: none;
    font-family: sans-serif;
    color: var(--color_heading);
}
:root{
    --main_color : #ff8716;
    --p_color : #7b7b7b;
    --bg_color : #f3f3f3;
    --white_color : #fff;
    --color_heading : #121412;
    --border_color : #e5e5e5d5;
    --sale_color : #e51a1a;
}
body{
    padding-top: 320px;
}

span{
    color: var(--main_color) ;
}
p{
   color: var(--p_color);
}
h1,h2,h3,h4,h5,h6{

    color: var(--color_heading);
    font-family: sans-serif;
}
img{
    width: 100%;
}
input, select, button {
    border: none;
    outline: none;
}
.btns {
    display: flex;
    align-items: center;
    gap: 20px;
}
.btn {
    padding: 10px 18px;
    text-transform: capitalize;
    border-radius: 2px;
    cursor: pointer;
    background: var(--main_color);
    color: var(--white_color);
    display: flex;
    gap: 10px;
    align-items: center;
    transition: 0.3s;
}

.btn i{
    color: var(--white_color);
}

.btn:hover {
    scale: 1.1;
}

.container{
   width: 90%;
   margin: auto;
   max-width: 1300px;
}
@media (max-width : 1350px) {
    .container{
        width: 90%;
    }
}
  /* Start Header */

  #main-header {
    background: #ffff;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    box-shadow: 5px 8px 8px #d1d1d13b;
    z-index: 1000;
  }
header .top_header .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 15px 0;
}

header .top_header .logo {
    width: 180px;
}
header .top_header .search_box {
    width: 610px;
    display: flex;
    align-items: center;
    border-radius: 2px;
    background: var(--bg_color);
}

header .top_header .search_box input {
    height: 55px;
    width: 400px;
    padding: 5px 15px 5px 10px;
    background: var(--bg_color);
}
header .top_header .search_box .select_box {
    position: relative;
}

header .top_header .search_box .select_box::after {
    content: '';
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    right: 0;
    width: 1px;
    height: 50%;
    background: #b9b9b9; 
}
header .top_header .search_box select {
    height: 55px;
    width: 190px;
    background: var(--bg_color);
    font-size: 16px;
    cursor: pointer;
    padding-left: 10px;
    margin-right: 10px;
}
header .top_header .search_box select option {
    font-size: 15px
}
header .top_header .search_box button {
    height: 55px;
    width: 60px;
    background: var(--main_color);
    font-size: 18px;
    cursor: pointer;
}
header .top_header .search_box button i {
    color: var(--white_color);
}

header .top_header .header_icons {
    display: flex;
    gap: 30px;
}
header .top_header .header_icons .icon {
    position: relative;
    cursor: pointer;
}

header .top_header .header_icons .icon i {
    font-size: 24px;
}

header .top_header .header_icons .icon .count {
    position: absolute;
    top: -10px;
    right: -10px;
    width: 20px;
    height: 20px;
    text-align: center;
    line-height: 20px;
    background: var(--main_color);
    color: var(--white_color);
    border-radius: 100%;
}

header .bottom_header {
    border-top: 1px solid var(--border_color);
}

header .bottom_header .container {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

header .bottom_header nav {
    display: flex;
    align-items: center;
    gap: 50px;
    height: 60px;
}

header .bottom_header .category_nav {
    width: 220px;
    position: relative;
    height: 100%;
}
header .bottom_header .category_nav {
    width: 220px;
    position: relative; 
}

header .bottom_header .category_nav .category_btn {
    height: 100%;
    width: 100%;
    border-radius: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background: var(--main_color);
    padding: 0 15px;
    cursor: pointer;
}

header .bottom_header .category_nav .category_btn p {
    color: var(--white_color);
    font-weight: 600;
    font-size: 15px;
}

header .bottom_header .category_nav .category_btn i {
    color: var(--white_color);
}

header .bottom_header .category_nav .category_nav_list {
    position: absolute;
    top: 100%;
    left: 0;
    background: var(--white_color);
    width: 100%;
    border: 1px solid #999;
    border-top: 0;
    display: flex;
    flex-direction: column;
    clip-path: polygon(0 0 , 100% 0 , 100% 0  ,0 0 );
    transition: 0.3s ease-in-out ;
}

header .bottom_header .category_nav .category_nav_list.active{

    clip-path: polygon(0 0 , 100% 0 , 100% 100% , 0 100%);
}


header .bottom_header .category_nav .category_nav_list a {
    padding: 14px 10px;
    border-bottom: 1px solid var(--border_color);
    font-size: 14px;
    color: var(--color_heading);
}

header .bottom_header .category_nav .category_nav_list a:last-child {
    border-bottom: 0;
}

header .bottom_header .category_nav .category_nav_list a:hover {
    background: #d0d0d0;
}

header .bottom_header .nav_links {
    display: flex;
    gap: 35px;
}
header .bottom_header .nav_links li a {
    color: var(--color_heading);
    transition: 0.3s;
}

header .bottom_header .nav_links li:hover a,
header .bottom_header .nav_links li.active a {
    color: var(--main_color);
}


/* Slide */

.slider {
    position: relative;
}

.slider .container {
    display: flex;
    justify-content: space-between;
}

.slider .banner_2 {
    width: 23%;
    height: 30%;
    object-fit: cover;
}

.slider .banner_2 { 
    height: 24%;
    width: 24%;
}
.slider .container .slide-swp{
    width: 75%;
    overflow: hidden;
    position: relative;
}
.swiper-wrapper{
    height: auto !important;
}

.slider .container .slide-swp .swiper-pagination span{
    background: #fff;
    opacity: 1;
}
/* ... */

